# tactics

./: .gitignore  CMakeLists.txt  Cargo.toml
examples/: quickstart.rs
mini/: CMakeLists.txt
mini/core/: TensorImpl.cpp  TensorImpl.h
mini/macros/: Export.h  cmake_macros.h.in
src/: lib.rs
tactics/: Tensor.cpp
tactics-core/: Cargo.toml
tactics-core/src/: lib.rs
tactics-data/: Cargo.toml
tactics-data/src/: lib.rs  test.rs
tactics-nn/: Cargo.toml
tactics-nn/src/: init.rs  lib.rs
tactics-optim/: Cargo.toml
tactics-optim/src/: lib.rs  optimizer.rs  penalty.rs
tactics-optim/src/adagrad/: mod.rs
tactics-optim/src/adam/: mod.rs
tactics-optim/src/amsgrad/: mod.rs
tactics-optim/src/lr_scheduler/: mod.rs
tactics-optim/src/lr_scheduler/exponential_lr/: mod.rs
tactics-optim/src/lr_scheduler/lambda_lr/: mod.rs
tactics-optim/src/lr_scheduler/multi_step_lr/: mod.rs
tactics-optim/src/lr_scheduler/multiplicative_lr/: mod.rs
tactics-optim/src/lr_scheduler/step_lr/: mod.rs
tactics-optim/src/rmsprop/: mod.rs
tactics-optim/src/sgd/: mod.rs
tactics-variable/: Cargo.toml
tactics-variable/src/: autograd.rs  gradient.rs  history.rs  lib.rs  serde.rs  utils.rs  var.rs  vardiff.rs
tactics-variable/src/cuda/: cuarray.rs  cuvar.rs  device.rs  mod.rs
tactics-variable/src/cuda/cunode/: mod.rs
tactics-variable/src/cuda/cunode/binary_op/: mod.rs
tactics-variable/src/node/: mod.rs
tactics-variable/src/node/absolute_error/: mod.rs
tactics-variable/src/node/addition/: mod.rs
tactics-variable/src/node/bce/: mod.rs
tactics-variable/src/node/bce_with_logits/: mod.rs
tactics-variable/src/node/chunk/: mod.rs
tactics-variable/src/node/concatenate/: mod.rs
tactics-variable/src/node/convolution/: mod.rs
tactics-variable/src/node/division/: mod.rs
tactics-variable/src/node/dropout/: mod.rs
tactics-variable/src/node/exp/: mod.rs
tactics-variable/src/node/kldiv/: mod.rs
tactics-variable/src/node/leaky_relu/: mod.rs
tactics-variable/src/node/logn/: mod.rs
tactics-variable/src/node/logsoftmax/: mod.rs
tactics-variable/src/node/matrix_matrix_mul/: mod.rs
tactics-variable/src/node/matrix_matrix_mul_t/: mod.rs
tactics-variable/src/node/matrix_vector_mul/: mod.rs
tactics-variable/src/node/mean/: mod.rs
tactics-variable/src/node/multi_concatenate/: mod.rs
tactics-variable/src/node/multi_stack/: mod.rs
tactics-variable/src/node/multiplication/: mod.rs
tactics-variable/src/node/negation/: mod.rs
tactics-variable/src/node/nll/: mod.rs
tactics-variable/src/node/pad/: mod.rs  padding_mode.rs
tactics-variable/src/node/pad/constant/: mod.rs
tactics-variable/src/node/pad/reflective/: mod.rs
tactics-variable/src/node/pad/replicative/: mod.rs  test.rs
tactics-variable/src/node/pad/zero/: mod.rs
tactics-variable/src/node/power/: mod.rs
tactics-variable/src/node/relu/: mod.rs
tactics-variable/src/node/sigmoid/: mod.rs
tactics-variable/src/node/softmax/: mod.rs
tactics-variable/src/node/softplus/: mod.rs
tactics-variable/src/node/sqrt/: mod.rs
tactics-variable/src/node/squared_error/: mod.rs
tactics-variable/src/node/stack/: mod.rs
tactics-variable/src/node/subtraction/: mod.rs
tactics-variable/src/node/sum/: mod.rs
tactics-variable/src/node/tanh/: mod.rs
tactics-variable/src/node/transpose/: mod.rs
tactics-variable/src/node/unsqueeze/: mod.rs
tactics-variable/src/node/vector_matrix_mul/: mod.rs
tactics-variable/src/node/vector_vector_mul/: mod.rs
